# ForgeAPI

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  test_manual.db  test_run.db
app/controllers/: __init__.py  base_controller.py
app/controllers/concerns/: __init__.py  authenticatable.py  paginatable.py
app/helpers/: __init__.py  response_helper.py
app/jobs/: __init__.py  base_job.py  cleanup_job.py
app/middleware/: __init__.py  auth_middleware.py
app/models/: __init__.py  base_model.py  post.py  user.py
app/models/concerns/: soft_deletable.py
app/schemas/: __init__.py  post_schema.py
app/services/: __init__.py  base_service.py  post_service.py  user_service.py
config/: __init__.py  celery.py  database.py  database.yml  database.yml.example  database_yml.py  routes.py  settings.py
db/: __init__.py  seeds.py
db/migrations/: env.py
db/migrations/versions/: 20240101_000001_create_users_table.py  20240101_000002_create_posts_table.py  20260309_175201_test_table_created.py
fastforge/: __init__.py  __main__.py  cli.py
fastforge/commands/: __init__.py  generate_cmd.py  migrate_cmd.py  new_cmd.py  routes_cmd.py  runserver_cmd.py
myapp/: README.md  main.py  manage.py  requirements.txt
myapp/app/: __init__.py
myapp/config/: celery.py  database.py  settings.py
myapp/tests/: conftest.py  test_auth.py  test_posts.py
scripts/: test_manual.py
tests/: conftest.py  test_controller_filters.py  test_health.py  test_model_callbacks.py  test_users.py
(+40 files in other folders)
